tests/machine/x/cpp/dataset_where_filter.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <iostream>
#include <string>
#include <vector>

struct People {
  decltype(std::string("Alice")) name;
  int age;
};
struct Adult {
  decltype(person.name) name;
  decltype(person.age) age;
  bool is_senior;
};
int main() {
  std::vector<People> people = {
      People{std::string("Alice"), 30}, People{std::string("Bob"), 15},
      People{std::string("Charlie"), 65}, People{std::string("Diana"), 45}};
  std::vector<Adult> adults = ([&]() {
    std::vector<Adult> __items;
    for (auto person : people) {
      if (!((person.age >= 18)))
        continue;
      __items.push_back(Adult{person.name, person.age, (person.age >= 60)});
    }
    return __items;
  })();
  std::cout << std::string("--- Adults ---") << std::endl;
  for (auto person : adults) {
    {
      std::cout << person.name;
      std::cout << ' ';
      std::cout << std::string("is");
      std::cout << ' ';
      std::cout << person.age;
      std::cout << ' ';
      std::cout << (person.is_senior ? std::string(" (senior)")
                                     : std::string(""));
      std::cout << std::endl;
    }
  }
  return 0;
}
